--- a/ruoyi-system/pom.xml
+++ b/ruoyi-system/pom.xml
@@ -37,6 +37,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-quartz</artifactId>
+        </dependency>
 
     </dependencies>
 
